[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "org-roam-to-obsidian"
version = "0.1.0"
description = "Converts Org-roam personal wiki into an Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pyyaml",
    "markdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
org-roam-to-obsidian = "org_roam_to_obsidian.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["I"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
